===================================
=              ITEMS              =
===================================

EARTH BOLT

~ Added file
~ Added projectile

FORSAKEN ORONOBLADE

~ Added sound effect for when projectile fires

~ Added file
~ Added projectile

BOULDER CHUNK

~ Added file
~ Added projectile

ROCKSLIDE (YOYO)

~ Added file
~ Added projectile

===================================
=              NPCS               =
===================================

DRAEK

+ Increased homing effect on sword projectiles from a factor of 0.3 to 0.42 (Expert)
~ Forced sword projectile to always travel 20 blocks/sec

+ Reduced attack loss per shotgun attack from 3 to 2
+ Increased dash speed from 8 to 10 blocks/sec (Expert)
+ Increased dash speed from 10 to 12 blocks/sec (Expert, enraged)
+ Increased homing effect on sword projectiles from a factor of 0.2 to 0.3 (Expert)

- Reduced contact damage from 50 to 45
- Reduced expert mode contact damage from 75 to 55
- Reduced expert mode defense from 32 to 25
- Reduced sword projectile's lifespan from 300 to 120 ticks

+ Added a new "shotgun" laser attack.  (Expert+)
+ Sword projectiles slightly home in on the player.  (Expert)
+ Draek summons two Young Wyrms after throwing all of his swords.  (Expert+)
+ Draek charges one more time for each subphase and charges are faster.  (Expert+)
~ Expert Mode AI added

+ Added two hitboxes to the sword projectile
- Base HP decreased from 4000 to 3000
~ Added gores on death

+ Increased laser speed
- Decreased laser base damage from 40 to 30
- Decreased sword base damage from 100 to 45
~ Fixed a bug involving interrupting Draek's sword throw as he transitioned into enraged Phase 1
~ Fixed a bug where spawning Draek without using the summon item caused him to not target the player

+ Base HP increased from 3000 to 4000
+ Base defense increased from 14 to 20
+ Added debuff immunities to Confused, Poisoned, and Burning
+ Decreased charge duration during charge subphases