@@ -1,151 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
+  <Import Project="..\..\references\tModLoader.targets" />
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F3F6B2D6-054A-48AC-B56B-A495FD978492}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CosmivengeonMod</RootNamespace>
     <AssemblyName>CosmivengeonMod</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <TargetFramework>net45</TargetFramework>
     <PlatformTarget>x86</PlatformTarget>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\..\..\Program Files (x86)\Microsoft XNA\XNA Game Studio\v4.0\References\Windows\x86\Microsoft.Xna.Framework.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Xna.Framework.Game, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\..\..\Program Files (x86)\Microsoft XNA\XNA Game Studio\v4.0\References\Windows\x86\Microsoft.Xna.Framework.Game.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Xna.Framework.Graphics, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\..\..\Program Files (x86)\Microsoft XNA\XNA Game Studio\v4.0\References\Windows\x86\Microsoft.Xna.Framework.Graphics.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Xna.Framework.Xact, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\..\..\Program Files (x86)\Microsoft XNA\XNA Game Studio\v4.0\References\Windows\x86\Microsoft.Xna.Framework.Xact.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-    <Reference Include="Terraria">
-      <HintPath>..\..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Modded Terraria\Terraria.exe</HintPath>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="CosmivengeonMod.cs" />
-    <Compile Include="Items\DebugOrTogglers\CoreOfDesolation.cs" />
-    <Compile Include="Items\Draek\BoulderChunk.cs" />
-    <Compile Include="Items\Draek\DraekScales.cs" />
-    <Compile Include="Items\Draek\DraekSummon.cs" />
-    <Compile Include="Items\DebugOrTogglers\ExpertToggleItem.cs" />
-    <Compile Include="Items\DebugOrTogglers\PotentiometerItem.cs" />
-    <Compile Include="Items\Draek\ForsakenOronoblade.cs" />
-    <Compile Include="Items\Draek\RockslideYoyo.cs" />
-    <Compile Include="Items\Draek\StoneTablet.cs" />
-    <Compile Include="Items\Draek\EarthBolt.cs" />
-    <Compile Include="Items\Masks\DraekMask.cs" />
-    <Compile Include="NPCs\Draek\Draek.cs" />
-    <Compile Include="NPCs\Draek\DraekP2.cs" />
-    <Compile Include="NPCs\Draek\DraekWyrmSummon.cs" />
-    <Compile Include="NPCs\Worm.cs" />
-    <Compile Include="PID.cs" />
-    <Compile Include="Projectiles\Draek\DraekProjectile.cs" />
-    <Compile Include="Projectiles\Draek\DraekRock.cs" />
-    <Compile Include="Projectiles\Draek\DraekSword.cs" />
-    <Compile Include="Projectiles\Draek\DraekSwordExtra.cs" />
-    <Compile Include="Projectiles\Weapons\BoulderChunkProjectile.cs" />
-    <Compile Include="Projectiles\Weapons\EarthBoltProjectile.cs" />
-    <Compile Include="Projectiles\Weapons\ForsakenOronobladeProjectile.cs" />
-    <Compile Include="Projectiles\Weapons\RockslideProjectile.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-      <DependentUpon>Settings.settings</DependentUpon>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup />
-  <ItemGroup>
-    <Content Include="build.txt" />
-    <Content Include="Changes.txt" />
-    <Content Include="description.txt" />
-    <Content Include="Gores\DraekArm.png" />
-    <Content Include="Items\Draek\BasiliskStaff.png" />
-    <Content Include="Items\Boss Bags\DraekTreasureBag.png" />
-    <Content Include="Items\Draek\BoulderChunk.png" />
-    <Content Include="Items\DebugOrTogglers\CoreOfDesolation.png" />
-    <Content Include="Items\Draek\DraekSummon.png" />
-    <Content Include="Items\Draek\DraekScales.png" />
-    <Content Include="Items\Draek\Earth_Bolt.png" />
-    <Content Include="Items\DebugOrTogglers\ExpertToggleItem.png" />
-    <Content Include="Items\Draek\ForsakenOronoblade.png" />
-    <Content Include="Items\Draek\JewelOfOronitus.png" />
-    <Content Include="Items\Masks\DraekMask.png" />
-    <Content Include="Items\DebugOrTogglers\Potentiometer.png" />
-    <Content Include="Items\Draek\Rockslide.png" />
-    <Content Include="Items\Draek\Scalestorm.png" />
-    <Content Include="Items\Draek\SlitherWand.png" />
-    <Content Include="Items\Draek\Stoneskipper.png" />
-    <Content Include="Items\Draek\StoneTablet.png" />
-    <Content Include="Items\Draek\Terra_Bolt.png" />
-    <Content Include="NPCs\Draek\Draek.png" />
-    <Content Include="NPCs\Draek\DraekP2Body.png" />
-    <Content Include="NPCs\Draek\DraekP2_Body0.png" />
-    <Content Include="NPCs\Draek\DraekP2_Body1.png" />
-    <Content Include="NPCs\Draek\DraekP2_Body2.png" />
-    <Content Include="NPCs\Draek\DraekP2_Body3.png" />
-    <Content Include="NPCs\Draek\DraekP2_Head.png" />
-    <Content Include="NPCs\Draek\DraekP2_Head_Head_Boss.png" />
-    <Content Include="NPCs\Draek\DraekP2_Tail.png" />
-    <Content Include="NPCs\Draek\DraekWyrmSummon_Body0.png" />
-    <Content Include="NPCs\Draek\DraekWyrmSummon_Body1.png" />
-    <Content Include="NPCs\Draek\DraekWyrmSummon_Head.png" />
-    <Content Include="NPCs\Draek\DraekWyrmSummon_Tail.png" />
-    <Content Include="NPCs\Draek\Draek_Head_Boss.png" />
-    <Content Include="NPCs\Draek\YoungWyrm.png" />
-    <Content Include="Projectiles\Draek\DraekProjectile.png" />
-    <Content Include="Projectiles\Draek\DraekRock.png" />
-    <Content Include="Projectiles\Draek\DraekSword.png" />
-    <Content Include="Projectiles\Summons\BabySnek.png" />
-    <Content Include="Projectiles\Weapons\BoulderChunkProjectile.png" />
-    <Content Include="Projectiles\Weapons\EarthBoltProjectile.png" />
-    <Content Include="Projectiles\Weapons\RockslideProjectile.png" />
-    <Content Include="Sounds\Music\SuccessorOfTheJewel.mp3" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Target Name="BuildMod" AfterTargets="Build">
+    <Exec Command="&quot;$(tMLBuildServerPath)&quot; -build $(ProjectDir) -eac $(TargetPath) -define $(DefineConstants) -unsafe $(AllowUnsafeBlocks)" />
+  </Target>
 </Project>
